# opentelemetry-python-contrib

instrumentation/opentelemetry-instrumentation-oslomessaging/: LICENSE  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-oslomessaging/src/opentelemetry/instrumentation/oslomessaging/: __init__.py  package.py  version.py
instrumentation/opentelemetry-instrumentation-oslomessaging/tests/: test_oslomessaging_integration.py
